tests/wpt/tests/third_party/test262/test/language/import/import-defer/errors/resolution-error/main_FIXTURE.js
// Copyright (C) 2025 Igalia, S.L. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

import defer * as ns from "./resolution-error_FIXTURE.js";

globalThis.evaluated = true;
